fix: hide global scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,14 @@
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+  
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  body::-webkit-scrollbar {
+    display: none;
   }
 }
 
